@@ -5230,6 +5230,7 @@ prog.cob:55: warning: expression '1' LESS THAN '5' is always TRUE
 prog.cob:55: warning: expression '1' LESS THAN '7' is always TRUE
 prog.cob:55: warning: expression '1' LESS THAN '9' is always TRUE
 prog.cob:57: warning: expression '5' LESS THAN '2' is always FALSE
+prog.cob:57: warning: expression '5' LESS THAN '1' is always FALSE
 prog.cob:57: warning: expression '5' LESS THAN '9' is always TRUE
 prog.cob:57: warning: expression '5' LESS THAN '7' is always TRUE
 prog.cob:59: warning: expression '5' GREATER THAN '1' is always TRUE
